--- a/style.css
+++ b/style.css
@@ -1,31 +1,18 @@
-html, body {
-    height: 100%;
-    width: 100%;
-    margin: 0;
+* {
     padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden; /* Prevent scrolling */
+    margin: 0 0 0 0;
+    box-sizing: border-box;
 }
-
 
 #jellyfish-attack, #jellyfish-death, #jellyfish-idle, #jellyfish-hurt, #jellyfish-walk, #turtle-attack, #turtle-death, #turtle-idle, #turtle-hurt, #turtle-walk, #octopus-attack, #octopus-death, #octopus-idle, #octopus-hurt, #octopus-walk, #swordfish-attack, #swordfish-death, #swordfish-idle, #swordfish-hurt, #swordfish-walk, #eel-attack, #eel-death, #eel-idle, #eel-hurt, #eel-walk, #anglerfish-attack, #anglerfish-death, #anglerfish-idle, #anglerfish-hurt, #anglerfish-walk, #turtle-attack-reversed, #turtle-walk-reversed {
     display: none;
 }
 
-canvas {
-    max-width: 100%;
-    max-height: 100%;
-    width: auto;
-    height: auto;
-}
 
 #game-area {
     background-image: linear-gradient(aqua, 20%,royalblue, 70%, darkblue);
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
